--- a/src/Schedule.EntityFrameworkCore/Schedule.EntityFrameworkCore.csproj
+++ b/src/Schedule.EntityFrameworkCore/Schedule.EntityFrameworkCore.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Schedule.Domain\Schedule.Domain.csproj" />
     <PackageReference Include="Volo.Abp.Autofac" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Dapper" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.0" />
@@ -30,6 +31,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations" />
   </ItemGroup>
 
 </Project>
