SCH-3: Bot init

--- a/src/Schedule.HttpApi.Host/appsettings.json
+++ b/src/Schedule.HttpApi.Host/appsettings.json
@@ -8,7 +8,7 @@
     "HealthCheckUrl": "/health-status"
   },
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=Schedule;User Id=sa;password=123qwe;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=Schedule; Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44332",
@@ -17,5 +17,11 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "3xvHxFdVr6ASH3c0"
+  },
+  "BotConfiguration": {
+    "BotToken": "5618983716:AAFUw3vEAjgv4feGQmLy4hlludTM4QKw3ik",
+    "HostAddress": "https://b5b8-37-214-57-68.eu.ngrok.io",
+    "Route": "/bot",
+    "SecretToken": "secret"
   }
 }
