--- a/src/Schedule.Application/Schedule.Application.csproj
+++ b/src/Schedule.Application/Schedule.Application.csproj
@@ -26,6 +26,8 @@
     <PackageReference Include="Volo.Abp.LanguageManagement.Application" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.TextTemplateManagement.Application" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.Gdpr.Application" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
