--- a/src/Schedule.Domain.Shared/Schedule.Domain.Shared.csproj
+++ b/src/Schedule.Domain.Shared/Schedule.Domain.Shared.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Schedule</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
@@ -22,6 +22,10 @@
     <PackageReference Include="Volo.Abp.TextTemplateManagement.Domain.Shared" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.Gdpr.Domain.Shared" Version="7.0.0" />
     <PackageReference Include="Volo.Abp.GlobalFeatures" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
+    <PackageReference Include="Telegram.Bot" Version="19.0.0-preview.2" />
   </ItemGroup>
 
   <ItemGroup>
