add test handler

--- a/src/Schedule.HttpApi.Host/Schedule.HttpApi.Host.csproj
+++ b/src/Schedule.HttpApi.Host/Schedule.HttpApi.Host.csproj
@@ -28,13 +28,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonX" Version="2.0.0-*" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Schedule.Application\Schedule.Application.csproj" />
     <ProjectReference Include="..\Schedule.EntityFrameworkCore\Schedule.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Schedule.HttpApi\Schedule.HttpApi.csproj" />
+    <ProjectReference Include="..\Schedule.TBot\Schedule.TBot.csproj" />
     <ProjectReference Include="..\Schedule.Worker.ParsePalesse\Schedule.Worker.ParsePalesse.csproj" />
   </ItemGroup>
 
